[package]
name = "nasaapodviewer-frontend"
version = "136.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
gloo-net = { version = "0.5.0", features = [ "json" ]}
serde = { version = "1.0.188", features = ["derive"] }
url = "2.4.1"
wasm-bindgen-futures = "0.4.37"
yew = { version = "0.21.0", features = ["csr"] }
