[package]
name = "nasaapodviewer-frontend"
version = "1341.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
gloo-net = { version = "0.5.0", features = [ "json" ]}
serde = { version = "1.0.196", features = ["derive"] }
url = "2.5.0"
wasm-bindgen-futures = "0.4.41"
yew = { version = "0.21.0", features = ["csr"] }
